# stdio-to-ws-rs

./: Cargo.toml  LICENSE  README.md
src/: log.rs  main.rs  persistent.rs  simple.rs  static_files.rs
tests/: cli_help.rs  connections.rs  content_length.rs  echo_roundtrip.rs  line_framing.rs  persist_mode.rs  quiet_logging.rs
tests/common/: mod.rs
