[package]
name = "stdio-to-ws-rs"
version = "0.1.0"
edition = "2021"
description = "Bridge stdio processes to WebSocket connections"
license = "Apache-2.0"
authors = ["wowa"]
repository = "https://github.com/wowa/stdio-to-ws-rs"
homepage = "https://github.com/wowa/stdio-to-ws-rs"
readme = "README.md"
keywords = ["websocket", "stdio", "bridge", "lsp", "acp"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "stdio-to-ws"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
serde_json = "1"
shell-words = "1"
colored = "3"
uuid = { version = "1", features = ["v4"] }
